# imagetrove-uploader

./: .gitignore  Aaf.hs  LICENSE  Main.hs  MainBruker.hs  MainDicom.hs  README.md  acl.conf  build_in_sandbox.sh  cabal.config  imagetrove-uploader.cabal  notes.md  projects.csv  superusers.csv  upload_Carlo.sh  upload_MBI.sh  upload_SAHMRI.sh  upload_biospec_heart_UWA.sh  upload_microct_rock.sh  upload_skyscan_femur.sh  upload_unsw_neura.sh
sample_config_files/: Bruker.conf  Carlo.conf  MBI.conf  SAHMRI.conf  Skyscan_femur.conf  UNSW.conf  UWA_biospec_heart.conf  microct_rock.conf
src/Data/: Dicom.hs
src/Network/ImageTrove/: Acid.hs  Bruker.hs  Main.hs  MainBruker.hs  MainDicom.hs  Utils.hs
src/Network/MyTardis/: API.hs  Instances.hs  MyTardis.hs  RestTypes.hs  Types.hs
src/Network/Orthanc/: API.hs
