name:                imagetrove-uploader
version:             0.1.0.0
synopsis:            Upload instrument datasets to Image Trove.
-- description:
homepage:            https://github.com/carlohamalainen/imagetrove-uploader
license:             BSD2
license-file:        LICENSE
author:              Carlo Hamalainen, The Centre for Advanced Imaging (The University of Queensland).
maintainer:          c.hamalainen@uq.edu.au
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:   Data.Dicom
                   , Network.ImageTrove.MainBruker
                   , Network.ImageTrove.MainDicom
                   , Network.ImageTrove.Utils
                   , Network.ImageTrove.Acid
                   , Network.ImageTrove.Bruker
                   , Network.MyTardis.API
                   , Network.MyTardis.Instances
                   , Network.MyTardis.Types
                   , Network.MyTardis.RestTypes
                   , Network.Orthanc.API
  -- other-modules:
  -- other-extensions:
  ghc-options:       -threaded
  build-depends:       base
                     , wreq
                     , time
                     , convertible
                     , unix
                     , directory
                     , Unixutils
                     , process
                     , filepath
                     , temporary
                     , transformers
                     , mtl
                     , aeson
                     , lens-aeson
                     , containers
                     , text
                     , bytestring
                     , mime-types
                     , http-client
                     , lens
                     , process-streaming < 0.7.0.0
                     , pipes-bytestring
                     , optparse-applicative
                     , mtl
                     , bytestring
                     , cryptohash
                     , parsec
                     , filepath
                     , directory
                     , transformers
                     , Unixutils
                     , unix
                     , process
                     , temporary
                     , containers
                     , aeson
                     , lens-aeson
                     , safe
                     , bytestring
                     , tagsoup
                     , configurator
                     , filemanip
                     , cassava
                     , vector
                     , text
                     , csv
                     , email-validate
                     , multimap
                     , http-client-tls
                     , connection
                     , http-conduit
                     , old-locale
                     , acid-state
                     , safecopy
                     , parallel-io
                     , stm
                     , async
                     , exceptions
                     , conduit

  hs-source-dirs:      src
  default-language:    Haskell2010


executable imagetrove-dicom-uploader
  main-is:           MainDicom.hs
  ghc-options:       -threaded

  build-depends:       base
                     , wreq
                     , time
                     , convertible
                     , unix
                     , directory
                     , Unixutils
                     , process
                     , filepath
                     , temporary
                     , transformers
                     , mtl
                     , aeson
                     , lens-aeson
                     , containers
                     , text
                     , bytestring
                     , mime-types
                     , http-client
                     , lens
                     , process-streaming < 0.7.0.0
                     , pipes-bytestring
                     , optparse-applicative
                     , mtl
                     , bytestring
                     , cryptohash
                     , parsec
                     , filepath
                     , directory
                     , transformers
                     , Unixutils
                     , unix
                     , process
                     , temporary
                     , containers
                     , aeson
                     , safe
                     , bytestring
                     , tagsoup
                     , configurator
                     , filemanip
                     , cassava
                     , vector
                     , text
                     , imagetrove-uploader
                     , csv
                     , email-validate
                     , multimap
                     , http-client-tls
                     , connection
                     , http-conduit
                     , old-locale
                     , acid-state
                     , safecopy
                     , parallel-io
                     , stm
                     , async
                     , exceptions
                     , conduit

executable imagetrove-bruker-uploader
  main-is:           MainBruker.hs
  ghc-options:       -threaded

  build-depends:       base
                     , wreq
                     , time
                     , convertible
                     , unix
                     , directory
                     , Unixutils
                     , process
                     , filepath
                     , temporary
                     , transformers
                     , mtl
                     , aeson
                     , lens-aeson
                     , containers
                     , text
                     , bytestring
                     , mime-types
                     , http-client
                     , lens
                     , process-streaming < 0.7.0.0
                     , pipes-bytestring
                     , optparse-applicative
                     , mtl
                     , bytestring
                     , cryptohash
                     , parsec
                     , filepath
                     , directory
                     , transformers
                     , Unixutils
                     , unix
                     , process
                     , temporary
                     , containers
                     , aeson
                     , safe
                     , bytestring
                     , tagsoup
                     , configurator
                     , filemanip
                     , cassava
                     , vector
                     , text
                     , imagetrove-uploader
                     , csv
                     , email-validate
                     , multimap
                     , http-client-tls
                     , connection
                     , http-conduit
                     , old-locale
                     , acid-state
                     , safecopy
                     , parallel-io
                     , stm
                     , async
                     , exceptions
                     , conduit
